# ukpack

./: .gitignore  README.md  example.toml  pyproject.toml  ruff.toml  ukpack  update-releases
ubuntu/: releases.toml
ubuntu/noble/: defaults.toml
ubuntu/noble/debian/: copyright  rules
ubuntu/noble/debian/rules.d/: 01-build.mk  11-meta-image.mk  12-meta-headers.mk  21-modules.mk  22-headers.mk
ubuntu/noble/debian/templates/: image.postinst  image.postrm  image.preinst  image.prerm  modules.postinst
ubuntu/resolute/: defaults.toml  linuxaa64.efi.stub  linuxarm.efi.stub  linuxia32.efi.stub  linuxriscv64.efi.stub  linuxx64.efi.stub
ubuntu/resolute/debian/: rules
ubuntu/resolute/debian/rules.d/: 01-build.mk  10-meta.mk  11-meta-image.mk  13-meta-tools.mk  20-image.mk  21-modules.mk  23-tools.mk  25-lmm-zfs.mk
ubuntu/resolute/debian/templates/: headers.postinst  image.postinst  image.postrm  image.preinst  image.prerm  modules.postinst  modules.postrm
